[gd_scene load_steps=12 format=3 uid="uid://b4fsmrslaowwn"]

[ext_resource type="Script" path="res://quake1_example/quake1_hub.gd" id="1_2c1wm"]
[ext_resource type="Texture2D" uid="uid://dwa5a34uawid4" path="res://quake1_example/background.png" id="1_q0fs5"]
[ext_resource type="Texture2D" uid="uid://ddgo0qldm1jtp" path="res://icon.svg" id="2_c3pq6"]
[ext_resource type="Script" path="res://quake1_example/mdl_instance.gd" id="4_q5pgd"]

[sub_resource type="Environment" id="Environment_8m3j4"]
ambient_light_color = Color(0.72549, 0.282353, 0.0784314, 1)

[sub_resource type="Animation" id="Animation_v10ej"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("root/mesh:seek")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_dc32k"]
resource_name = "seekloop"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("root/mesh:seek")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_eflf5"]
_data = {
"RESET": SubResource("Animation_v10ej"),
"seekloop": SubResource("Animation_dc32k")
}

[sub_resource type="Animation" id="Animation_dy4w6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("root/mesh:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_flwlq"]
resource_name = "spin"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("root/mesh:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 6.28319, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_iedm2"]
_data = {
"RESET": SubResource("Animation_dy4w6"),
"spin": SubResource("Animation_flwlq")
}

[node name="hub" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2c1wm")

[node name="background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_q0fs5")
expand_mode = 1
stretch_mode = 6

[node name="tabs" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2

[node name="PAK Viewer" type="Control" parent="tabs"]
layout_mode = 2

[node name="vbox" type="VBoxContainer" parent="tabs/PAK Viewer"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 24.0
offset_right = -24.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2

[node name="hbox" type="HBoxContainer" parent="tabs/PAK Viewer/vbox"]
layout_mode = 2

[node name="000" type="Label" parent="tabs/PAK Viewer/vbox/hbox"]
layout_mode = 2
text = "Mod Directory"

[node name="path" type="LineEdit" parent="tabs/PAK Viewer/vbox/hbox"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = ".../Quake/ID1/*.pak"
caret_blink = true
caret_blink_interval = 0.5

[node name="browse" type="Button" parent="tabs/PAK Viewer/vbox/hbox"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
text = ". . ."

[node name="hbox4" type="HBoxContainer" parent="tabs/PAK Viewer/vbox"]
layout_mode = 2

[node name="000" type="LinkButton" parent="tabs/PAK Viewer/vbox/hbox4"]
layout_mode = 2
tooltip_text = "Download Quake1 MAP sources"
text = "MAP Directory"
underline = 1
uri = "https://rome.ro/s/quake_map_source.zip"

[node name="path" type="LineEdit" parent="tabs/PAK Viewer/vbox/hbox4"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = ".../QuakeMapSource/*.map"
caret_blink = true
caret_blink_interval = 0.5

[node name="browse" type="Button" parent="tabs/PAK Viewer/vbox/hbox4"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
text = ". . ."

[node name="mapupper" type="CheckBox" parent="tabs/PAK Viewer/vbox"]
layout_mode = 2
button_pressed = true
text = "Convert MAP filenames to UPPERCASE on load"

[node name="hbox2" type="HBoxContainer" parent="tabs/PAK Viewer/vbox"]
layout_mode = 2

[node name="load" type="Button" parent="tabs/PAK Viewer/vbox/hbox2"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
size_flags_horizontal = 6
text = "Load"

[node name="bsponly" type="CheckButton" parent="tabs/PAK Viewer/vbox/hbox2"]
layout_mode = 2
button_pressed = true
text = "Show BSP files only"

[node name="hbox3" type="HSplitContainer" parent="tabs/PAK Viewer/vbox"]
layout_mode = 2
size_flags_vertical = 3

[node name="tree" type="Tree" parent="tabs/PAK Viewer/vbox/hbox3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
hide_root = true

[node name="view" type="Control" parent="tabs/PAK Viewer/vbox/hbox3"]
layout_mode = 2
size_flags_horizontal = 3

[node name="texview" type="VBoxContainer" parent="tabs/PAK Viewer/vbox/hbox3/view"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5

[node name="tex" type="TextureRect" parent="tabs/PAK Viewer/vbox/hbox3/view/texview"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_c3pq6")
expand_mode = 1
stretch_mode = 5

[node name="info" type="Label" parent="tabs/PAK Viewer/vbox/hbox3/view/texview"]
layout_mode = 2
text = "Select an LMP or WAD entry file to view a texture !"
autowrap_mode = 2

[node name="mdlview" type="VBoxContainer" parent="tabs/PAK Viewer/vbox/hbox3/view"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="vc" type="SubViewportContainer" parent="tabs/PAK Viewer/vbox/hbox3/view/mdlview"]
layout_mode = 2
size_flags_vertical = 3
stretch = true

[node name="vp" type="SubViewport" parent="tabs/PAK Viewer/vbox/hbox3/view/mdlview/vc"]
handle_input_locally = false
size = Vector2i(2, 2)
render_target_update_mode = 0

[node name="root" type="Node3D" parent="tabs/PAK Viewer/vbox/hbox3/view/mdlview/vc/vp"]

[node name="mesh" type="MeshInstance3D" parent="tabs/PAK Viewer/vbox/hbox3/view/mdlview/vc/vp/root"]
transform = Transform3D(0.031, 0, 0, 0, 0.031, 0, 0, 0, 0.031, 0, 0, 0)
script = ExtResource("4_q5pgd")

[node name="cam3d" type="Camera3D" parent="tabs/PAK Viewer/vbox/hbox3/view/mdlview/vc/vp/root"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.125)
environment = SubResource("Environment_8m3j4")
current = true
near = 0.001
far = 32.0

[node name="light" type="DirectionalLight3D" parent="tabs/PAK Viewer/vbox/hbox3/view/mdlview/vc/vp/root"]
transform = Transform3D(1, 0, 0, 0, 0.5, 0.866025, 0, -0.866025, 0.5, 0, 0, 0)

[node name="animesh" type="AnimationPlayer" parent="tabs/PAK Viewer/vbox/hbox3/view/mdlview/vc/vp"]
unique_name_in_owner = true
speed_scale = 0.1
libraries = {
"": SubResource("AnimationLibrary_eflf5")
}

[node name="anispin" type="AnimationPlayer" parent="tabs/PAK Viewer/vbox/hbox3/view/mdlview/vc/vp"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_iedm2")
}

[node name="status" type="Label" parent="tabs/PAK Viewer/vbox"]
layout_mode = 2
horizontal_alignment = 1

[node name="prog" type="ProgressBar" parent="tabs/PAK Viewer/vbox"]
visible = false
layout_mode = 2
max_value = 1.0

[node name="Viewer Settings" type="Control" parent="tabs"]
visible = false
layout_mode = 2

[node name="vbox" type="VBoxContainer" parent="tabs/Viewer Settings"]
layout_mode = 1
anchors_preset = -1
offset_left = 24.0
offset_top = 24.0
offset_right = -24.0
offset_bottom = -24.0

[node name="s_registered" type="CheckBox" parent="tabs/Viewer Settings/vbox"]
unique_name_in_owner = true
layout_mode = 2
button_pressed = true
text = "Registered"

[node name="s_occlusion_culling" type="CheckBox" parent="tabs/Viewer Settings/vbox"]
unique_name_in_owner = true
layout_mode = 2
text = "Occlusion Culling"

[node name="s_difficulity" type="OptionButton" parent="tabs/Viewer Settings/vbox"]
unique_name_in_owner = true
layout_mode = 2
item_count = 6
selected = 1
popup/item_0/text = "Easy"
popup/item_0/id = 0
popup/item_1/text = "Normal"
popup/item_1/id = 1
popup/item_2/text = "Hard"
popup/item_2/id = 2
popup/item_3/text = "Nightmare"
popup/item_3/id = 3
popup/item_3/disabled = true
popup/item_4/text = ""
popup/item_4/id = 1024
popup/item_4/separator = true
popup/item_5/text = "Deathmatch"
popup/item_5/id = 4

[node name="s_rendering" type="OptionButton" parent="tabs/Viewer Settings/vbox"]
unique_name_in_owner = true
layout_mode = 2
item_count = 3
selected = 0
popup/item_0/text = "BSP Lightmap"
popup/item_0/id = 0
popup/item_1/text = "Lightmap + SDFGI"
popup/item_1/id = 1
popup/item_1/disabled = true
popup/item_2/text = "Lightmap + VoxelGI"
popup/item_2/id = 2
popup/item_2/disabled = true

[node name="dialog" type="FileDialog" parent="."]
title = "Open a Directory"
size = Vector2i(392, 162)
ok_button_text = "Select Current Folder"
file_mode = 2
access = 2
show_hidden_files = true

[node name="wavplay" type="AudioStreamPlayer" parent="."]

[connection signal="text_submitted" from="tabs/PAK Viewer/vbox/hbox/path" to="." method="_on_path_text_submitted"]
[connection signal="pressed" from="tabs/PAK Viewer/vbox/hbox/browse" to="." method="_on_browse_pressed" binds= [false]]
[connection signal="text_submitted" from="tabs/PAK Viewer/vbox/hbox4/path" to="." method="_on_path_text_submitted"]
[connection signal="pressed" from="tabs/PAK Viewer/vbox/hbox4/browse" to="." method="_on_browse_pressed" binds= [true]]
[connection signal="pressed" from="tabs/PAK Viewer/vbox/hbox2/load" to="." method="_on_load_pressed"]
[connection signal="toggled" from="tabs/PAK Viewer/vbox/hbox2/bsponly" to="." method="_on_bsponly_toggled"]
[connection signal="item_activated" from="tabs/PAK Viewer/vbox/hbox3/tree" to="." method="_on_tree_item_activated"]
[connection signal="item_selected" from="tabs/PAK Viewer/vbox/hbox3/tree" to="." method="_on_tree_item_selected"]
[connection signal="dir_selected" from="dialog" to="." method="_on_dialog_dir_selected"]
